--- a/views/admin/eventos/index.twig
+++ b/views/admin/eventos/index.twig
@@ -3,11 +3,11 @@
 {% block content %}
 
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
+		<div class="">
+			<div class="">
 				<h4 class="card-title">Eventos del sistema</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<form method="post" id="filtro" class="form-horizontal">
 					<div class="row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Nivel</label>
@@ -43,25 +43,27 @@
 					<div class="mb-0 mt-4 ">
 						<div class="col-md-12">
 							<button type="submit" class="btn btn-secondary">
-								<i class="glyphicon glyphicon-search"></i> Filtrar
+								<i class=""></i> Buscar
 							</button>
 							<button class="btn btn-secondary" onclick="todos()" type="button">
-								<i class="fa fa-eye"></i> Ver todos
+								<i class=""></i> Ver todos
 							</button>
 						</div>
 					</div>
 				</form>
 			</div>
 		</div>
+		<br>
+		<br>
 	</div>
 
 
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
+		<div class="">
+			<div class="">
 				<h4 class="card-title">Lista de eventos</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<div id="lista"></div>
 			</div>
 		</div>
