--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -2,11 +2,11 @@
 {% block content %}
 	<div id="app">
 		<form method="POST" action="{{ root }}/producto/guardarSeguimiento" id="form-edit-seguimiento" class="form-horizontal" autocomplete="off" enctype="multipart/form-data">
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">CLIENTE</h4>
 				</div>
-				<div class="card-body">
+				<div class="">
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Nombres *</label>
 						<div class="col-md-4 col-informacion">
@@ -179,11 +179,11 @@
 
 
 
-			<div class="card">
-				<div class="card-header">
-					<h4 class="card-title">SEGUIMIENTO prueba</h4>
+			<div class="">
+				<div class="">
+					<h4 class="card-title">SEGUIMIENTO </h4>
 				</div>
-				<div class="card-body">
+				<div class="">
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_nivel1 }}</label>
 						<div class="col-md-4 col-informacion">
