--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -31,7 +31,7 @@
 						<i class="fa fa-plus"></i>
 					</a>
 					<a href="{{ root }}/producto/verSeguimientos?id={{ l.id }}" target="_self" class="btn btn-icon btn-success" title="Ver Seguimiento">
-						<i class="fa fa-eye"></i>
+						<i class="">G</i>
 					</a>
 				</td>
 				<td>{{ l.institucion_nombre }}</td>
