--- a/views/admin/notificaciones/index.twig
+++ b/views/admin/notificaciones/index.twig
@@ -77,7 +77,7 @@
 
 					</div>
 					<div class="ibox-footer">
-						<button type="submit" class="btn">Filtrar</button>
+						<button type="submit" class="btn">Buscar</button>
 						<a class="btn" href="javascript:;" onclick="todos()">Ver todos</a>
 					</div>
 				</div>
