--- a/views/campana/index.twig
+++ b/views/campana/index.twig
@@ -59,7 +59,7 @@
 
 						<div class="mb-0 mt-4 ">
 							<div class="col-md-12">
-								<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
+								<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Buscar</button>
 								<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
 								<a href="{{ root }}/campana/crear" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Crear</a>
 							</div>
