--- a/views/cargarArchivo/aplicativoDiners.twig
+++ b/views/cargarArchivo/aplicativoDiners.twig
@@ -2,33 +2,33 @@
 {% block content %}
 	<div id="app">
 		<div class="col-md-12 col-xl-12">
-			<form method="POST" id="form-edit" class="form-horizontal">
-				<div class="card">
-					<div class="card-header">
+			<form method="POST" id="form-edit" class="">
+				<div class="">
+					<div class="">
 						<h4 class="card-title">Ingresar archivo</h4>
 					</div>
-					<div class="card-body">
-						<p style="text-align: justify;">
+					<div class="">
+						<!--p style="text-align: justify;">
 							Permite la carga del archivo con los datos completos de los clientes para realizar el seguimiento respectivo,
 							los datos cargados serán asignados al estado "ASIGNADO_DINERS" y los clientes que no se encuentren en este listado serán
 							desactivados.
-						</p>
+						</p-->
 						<fieldset id="campos">
 							<div class=" row mb-4">
-								<label for="inputName" class="col-md-2 form-label">Archivo *</label>
+								<label for="inputName" class="col-md-2 form-label"></label>
 								<div class="col-md-8 col-informacion">
 									<input class="form-control" type="file" name="archivo" id="archivo" required>
 								</div>
 							</div>
 
-							<div class=" row mb-4">
+							<!--<div class=" row mb-4">
 								<label for="inputName" class="col-md-2 form-label">Observaciones</label>
 								<div class="col-md-8 col-informacion">
 									<textarea rows="3" name="observaciones" id="observaciones"
 									          class="form-control form-control-sm"
 									          placeholder="Observaciones"></textarea>
 								</div>
-							</div>
+							</div>-->
 
 							<div class="mb-0 mt-4 ">
 								<div class="col-md-12">
@@ -39,14 +39,16 @@
 							</div>
 						</fieldset>
 					</div>
+					<br>
+					<br>
 				</div>
 			</form>
 
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">Resultado</h4>
 				</div>
-				<div class="card-body">
+				<div class="">
 					<div class="ibox-content" id="resultado">
 					</div>
 				</div>
