--- a/views/cargarArchivo/clientesPichincha.twig
+++ b/views/cargarArchivo/clientesPichincha.twig
@@ -2,12 +2,12 @@
 {% block content %}
 	<div id="app">
 		<div class="col-md-12 col-xl-12">
-			<form method="POST" id="form-edit" class="form-horizontal">
-				<div class="card">
-					<div class="card-header">
+			<form method="POST" id="form-edit" class="">
+				<div class="">
+					<div class="">
 						<h4 class="card-title">Ingresar archivo pichincha</h4>
 					</div>
-					<div class="card-body">
+					<div class="">
 						<p style="text-align: justify;">
 							Permite la carga del archivo con los datos completos de los clientes de un cedente para realizar el seguimiento respectivo,
 							los datos cargados serán asignados al estado "ASIGNADO".
@@ -15,8 +15,8 @@
 						<fieldset id="campos">
 							<div class=" row mb-4">
                                 <label for="inputName" class="col-md-2 form-label">Cedente *</label>
-                                <div class="col-md-8 col-informacion">
-                                    <select class="form-control" name="institucion_id" id="institucion_id" required>
+                                <div class="col-md-2 col-informacion">
+                                    <select class="form" name="institucion_id" id="institucion_id" required>
                                         <option value="">Seleccione un cedente</option>
                                         {% for institucion in instituciones %}
                                             <option value="{{ institucion.id }}">{{ institucion.nombre }}</option>
@@ -24,21 +24,21 @@
                                     </select>
                                 </div>
                             </div>
-							<div class=" row mb-4">
+							<div class=" row mb-2">
 								<label for="inputName" class="col-md-2 form-label">Archivo *</label>
-								<div class="col-md-8 col-informacion">
+								<div class="col-md-4 col-informacion">
 									<input class="form-control" type="file" name="archivo" id="archivo" required>
 								</div>
 							</div>
 
-							<div class=" row mb-4">
+							<!--<div class=" row mb-4">
 								<label for="inputName" class="col-md-2 form-label">Observaciones</label>
 								<div class="col-md-8 col-informacion">
 									<textarea rows="3" name="observaciones" id="observaciones"
 									          class="form-control form-control-sm"
 									          placeholder="Observaciones"></textarea>
 								</div>
-							</div>
+							</div>-->
 
 							<div class="mb-0 mt-4 ">
 								<div class="col-md-12">
@@ -52,11 +52,11 @@
 				</div>
 			</form>
 
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">Resultado</h4>
 				</div>
-				<div class="card-body">
+					<div class="">
 					<div class="ibox-content" id="resultado">
 					</div>
 				</div>
