--- a/views/cliente/index.twig
+++ b/views/cliente/index.twig
@@ -2,12 +2,12 @@
 {% block content %}
 	<form method="post" id="filtro" class="form-horizontal">
 		<div class="col-md-12 col-xl-12">
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">Filtros de Búsqueda</h4>
 				</div>
 				<div id="app">
-					<div class="card-body">
+					<div class="">
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Institución</label>
 							<div class="col-md-4">
@@ -47,23 +47,26 @@
 
 						<div class="mb-0 mt-4 ">
 							<div class="col-md-12">
-								<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-								<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
-								<a href="{{ root }}/cliente/crear" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Crear</a>
+								<button type="submit" class="btn btn-secondary"><i class=""></i> Buscar</button>
+								<button class="btn btn-secondary" onclick="todos()" type="button"><i class=""></i> Ver todo</button>
+								<a href="{{ root }}/cliente/crear" class="btn btn-primary"><i class=""></i>Crear</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<br>
+			<br>
+
 		</div>
 	</form>
 
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
+		<div class="">
+			<div class="">
 				<h4 class="card-title">Lista de Clientes</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<div id="lista"></div>
 			</div>
 		</div>
