--- a/views/paleta/editar.twig
+++ b/views/paleta/editar.twig
@@ -3,11 +3,11 @@
 	<div id="app">
 		<div class="col-md-12 col-xl-12">
 			<form method="POST" action="{{ root }}/paleta/guardar" id="form-edit" class="form-horizontal" autocomplete="off" enctype="multipart/form-data">
-				<div class="card">
-					<div class="card-header">
+				<div class="">
+					<div class="">
 						<h4 class="card-title">Información General</h4> 
 					</div>
-					<div class="card-body">
+					<div class="">
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Número</label>
