--- a/views/paleta/index.twig
+++ b/views/paleta/index.twig
@@ -2,17 +2,17 @@
 
 {% block content %}
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
-				<h4 class="card-title">Filtros de Búsqueda</h4>
+		<div class="">
+			<div class="">
+				<h4 class="">Filtros de Búsqueda</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<form method="post" id="filtro" class="form-horizontal">
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Número</label>
+						<!--label for="inputName" class="col-md-2 form-label">Número</label>
 						<div class="col-md-4">
 							<input type="text" class="form-control" name="numero" id="numero" value="{{ filtros.numero }}"/>
-						</div>
+						</div-->
 
 						<label for="inputName" class="col-md-2 form-label">Nombre</label>
 						<div class="col-md-4">
@@ -21,43 +21,46 @@
 					</div>
 
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Tipo gestión</label>
+						<!--label for="inputName" class="col-md-2 form-label">Tipo gestión</label>
 						<div class="col-md-4">
 							<select class="form-control form-select select2" name="tipo_gestion" id="tipo_gestion">
 								<option value=""></option>
 								<option value="cobranza">COBRANZA</option>
 								<option value="venta">VENTA</option>
 							</select>
-						</div>
+						</div-->
 
-						<label for="inputName" class="col-md-2 form-label">Tipo perfil</label>
+						<!--label for="inputName" class="col-md-2 form-label">Tipo perfil</label>
 						<div class="col-md-4">
 							<select class="form-control form-select select2" name="tipo_perfil" id="tipo_perfil">
 								<option value=""></option>
 								<option value="telefonico">TELEFÓNICO</option>
 								<option value="campo">CAMPO</option>
 							</select>
-						</div>
+						</div-->
 					</div>
 
 					<div class="mb-0 mt-4 ">
 						<div class="col-md-12">
-							<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-							<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
-							<a href="{{ root }}/paleta/crear" class="btn btn-primary"><i class="fa fa-plus-circle"></i> Crear</a>
+							<button type="submit" class="btn btn-secondary"><i class=""></i> Buscar</button>
+							<button class="btn btn-secondary" onclick="todos()" type="button"><i class=""></i> Ver todos</button>
+							<a href="{{ root }}/paleta/crear" class="btn btn-primary"><i class=""></i> Crear</a>
 						</div>
 					</div>
 				</form>
 			</div>
 		</div>
+		<br>
+		<br>
+
 	</div>
 
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
-				<h4 class="card-title">Lista de Paletas</h4>
+		<div class="">
+			<div class="">
+				<h4 class="">Lista de Paletas</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<div id="lista"></div>
 			</div>
 		</div>
