--- a/views/plantillas/index.twig
+++ b/views/plantillas/index.twig
@@ -49,7 +49,7 @@
                 </div>
                 <div class="ibox-footer">
 
-                    <button type="submit" class="btn">Filtrar</button>
+                    <button type="submit" class="btn">Buscar</button>
                     <a class="btn" href="javascript:;" onclick="todos()">Ver todos</a>
                     <a href="{{ root }}/plantillas/crear" class="btn btn-small"><i
                                 class="glyphicon glyphicon-plus-sign"></i> Crear plantilla</a>
