--- a/views/producto/index.twig
+++ b/views/producto/index.twig
@@ -2,13 +2,13 @@
 {% block content %}
 	<form method="post" id="filtro" class="form-horizontal">
 		<div class="col-md-12 col-xl-12">
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">Filtros de Búsqueda</h4>
 				</div>
 				<div id="app">
-					<div class="card-body">
-						<div class=" row mb-4">
+					<div class="">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Fecha inicio</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control fecha" name="fecha_inicio" id="fecha_inicio" value="{{ filtros.fecha_inicio }}"/>
@@ -18,9 +18,9 @@
 							<div class="col-md-4">
 								<input type="text" class="form-control fecha" name="fecha_fin" id="fecha_fin" value="{{ filtros.fecha_fin }}"/>
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Institución</label>
 							<div class="col-md-4">
 								<div class="input-group">
@@ -30,7 +30,7 @@
 										<i class="glyphicon glyphicon-search"></i>
 									</button>
 								</div>
-							</div>
+							</div-->
 
 							<label for="inputName" class="col-md-2 form-label">Cédula</label>
 							<div class="col-md-4">
@@ -38,7 +38,7 @@
 							</div>
 						</div>
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Nombres</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="nombres" id="nombres" value="{{ filtros.nombres }}"/>
@@ -48,9 +48,9 @@
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="producto" id="producto" value="{{ filtros.producto }}"/>
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Teléfono</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="telefono" id="telefono" value="{{ filtros.telefono }}"/>
@@ -60,9 +60,9 @@
 							<div class="col-md-4">
 								{{ select_tag('estado', listas.estado, '', {'class':'select2 form-control','prompt': '','multiple':'multiple'} ) }}
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Correo electrónico</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="correo" id="correo" value="{{ filtros.correo }}"/>
@@ -72,9 +72,9 @@
 							<div class="col-md-4">
 								{{ select_tag('campana', listas.campana, '', {'class':'select2 form-control','prompt': '','multiple':'multiple'} ) }}
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Acción</label>
 							<div class="col-md-4">
 								<select class="select2 form-control" multiple id="nivel1" name="nivel1[]">
@@ -88,9 +88,9 @@
 									<option value=""></option>
 								</select>
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Tipo de contacto</label>
 							<div class="col-md-4">
 								<select class="select2 form-control" multiple id="nivel3" name="nivel3[]">
@@ -104,12 +104,12 @@
 									<option value=""></option>
 								</select>
 							</div>
-						</div>
+						</div-->
 
 						<div class="mb-0 mt-4 ">
 							<div class="col-md-12">
-								<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-								<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
+								<button type="submit" class="btn btn-secondary"><i class=""></i> Buscar</button>
+								<button class="btn btn-secondary" onclick="todos()" type="button"><i class=""></i> Ver todos</button>
 							</div>
 						</div>
 					</div>
@@ -119,11 +119,11 @@
 	</form>
 
 	<div class="col-md-12 col-xl-12">
-		<div class="card">
-			<div class="card-header">
+		<div class="">
+			<div class="">
 				<h4 class="card-title">Lista de Operaciones</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<div id="lista"></div>
 			</div>
 		</div>
