--- a/views/producto/indexPichincha.twig
+++ b/views/producto/indexPichincha.twig
@@ -2,13 +2,13 @@
 {% block content %}
 	<form method="post" id="filtro" class="form-horizontal">
 		<div class="col-md-12 col-xl-12">
-			<div class="card">
-				<div class="card-header">
+			<div class="">
+				<div class="">
 					<h4 class="card-title">Filtros de Búsqueda</h4>
 				</div>
 				<div id="app">
-					<div class="card-body">
-						<div class=" row mb-4">
+					<div class="">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Fecha inicio</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control fecha" name="fecha_inicio" id="fecha_inicio" value="{{ filtros.fecha_inicio }}"/>
@@ -18,9 +18,9 @@
 							<div class="col-md-4">
 								<input type="text" class="form-control fecha" name="fecha_fin" id="fecha_fin" value="{{ filtros.fecha_fin }}"/>
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Código operación</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="producto" id="producto" value="{{ filtros.producto }}"/>
@@ -30,7 +30,7 @@
 							<div class="col-md-4">
 								{{ select_tag('estado', listas.estado, '', {class:'form-control form-select select2',prompt: ''} ) }}
 							</div>
-						</div>
+						</div-->
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Nombres</label>
@@ -44,7 +44,7 @@
 							</div>
 						</div>
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Teléfono</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="telefono" id="telefono" value="{{ filtros.telefono }}"/>
@@ -59,20 +59,20 @@
 									{% endfor %}
 								</select>
 							</div>
-						</div>
+						</div-->
 
-						<div class=" row mb-4">
+						<!--div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Correo electrónico</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="correo" id="correo" value="{{ filtros.correo }}"/>
 							</div>
-						</div>
+						</div-->
 
 						<div class="mb-0 mt-4 ">
 							<div class="col-md-12">
-								<button type="submit" class="btn btn-secondary"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-								<button class="btn btn-secondary" onclick="todos()" type="button"><i class="fa fa-eye"></i> Ver todos</button>
-								<button class="btn btn-default-light" onclick="todos()" type="button"><i class="fa fa-magic"></i> Asignar Seguimiento</button>
+								<button type="submit" class="btn btn-secondary"><i class=""></i> Buscar</button>
+								<button class="btn btn-secondary" onclick="todos()" type="button"><i class=""></i> Ver todos</button>
+								<button class="btn btn-default-light" onclick="todos()" type="button"><i class=""></i> Asignar Seguimiento</button>
 							</div>
                             <div class="col-md-8 col-informacion">
                                 <select class="form-control" name="institucion_id" id="institucion_id" required>
@@ -95,7 +95,7 @@
 			<div class="card-header">
 				<h4 class="card-title">Lista de Operaciones</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<div id="lista"></div>
 			</div>
 		</div>
