--- a/views/reportes/baseCarga.twig
+++ b/views/reportes/baseCarga.twig
@@ -2,11 +2,11 @@
 {% block content %}
 	{% include "reportes/filtrosBaseCarga.twig" %}
 	<div id="app">
-		<div class="card">
-			<div class="card-header">
-				<h4 class="card-title">Datos</h4>
+		<div class="">
+			<div class="">
+				<h4 class="">Datos</h4>
 			</div>
-			<div class="card-body">
+			<div class="">
 				<a class="btn btn-default-light" id="btnExportar">
 					<i class="fa fa-file-excel-o"></i>
 					Exportar
