--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -2,8 +2,8 @@
 {% block content %}
 	{% include "reportes/filtrosBaseGeneral.twig" %}
 	<div id="app">
-		<div class="card">
-			<div class="card-header">
+		<div class="">
+			<div class="">
 				<h4 class="card-title">Datos</h4>
 			</div>
 			<div class="card-body">
