--- a/views/reportes/filtrosBaseCarga.twig
+++ b/views/reportes/filtrosBaseCarga.twig
@@ -1,8 +1,8 @@
-<div class="card">
-	<div class="card-header">
+<div class="">
+	<div class="">
 		<h4 class="card-title">Filtros de Búsqueda</h4>
 	</div>
-	<div class="card-body">
+	<div class="">
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
